Added game search page